--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,8 @@ button{
 .element{
   margin-block: 2rem ;
   display: grid;
-  grid-template-columns: 400px 400px 400px;
-  grid-template-rows: 400px 400px 400px;
+  grid-template-columns: 500px 500px 500px;
+  grid-template-rows: 500px 500px 500px;
   align-items: center;
   justify-content: center;
   column-gap: 5rem;
@@ -65,6 +65,7 @@ button{
   max-width: 250px;
 }
 .element-div{
+  display:grid;
   grid-column-start: 1;
   grid-column-end: 3; 
    background-color: lightblue;
@@ -73,6 +74,7 @@ button{
   border: 3px solid black;
   margin:  auto;
   padding: 20px;
+  gap: 1rem;
  
 }
 .element11{
